# ctu_cras_norlab_hexapod_controller

./: CMakeLists.txt  README.md  package.xml
config/: lily.json  phantom.json  readme.md
include/hexapod_controller/: calc_utils.h  leg.h  robot.h
launch/: lily.launch
src/: leg.cpp  main.cpp  robot.cpp
