<?xml version="1.0"?>
<package format="2">
  <name>hexapod_controller</name>
  <version>1.0.0</version>
  <description>The hexapod_controller package</description>
  
  <maintainer email="petr.cizek@fel.cvut.cz">Petr Cizek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>libjsoncpp-dev</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>
